deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
  labels:
    app: wisecow
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
  containers:
  - name: wisecow
    image: wiseco.azurecr.io/wisecow:latest
    imagePullPolicy: Always
  imagePullSecrets:
  - name: acr-secret
        ports:
        - containerPort: 4499
